# module_safetools

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  debug.jks  proguard-rules.pro
app/libs/: lib_jnitools-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kalu/encryption/: MainActivity.java
app/src/main/java/com/kalu/jnitools/: MainActivity.java
app/src/main/java/com/kalu/safetools/: MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: string.xml
gradle/wrapper/: gradle-wrapper.properties
lib_encryption/: CMakeLists.txt  proguard-rules.pro  readme.txt
lib_encryption/src/main/cpp/aes/: aes.h
lib_encryption/src/main/cpp/base64/: base64.c  base64.h
lib_encryption/src/main/cpp/cipher/: ciphertool.c
lib_encryption/src/main/cpp/jnionload/: jnionload.c  jnionload.h
lib_encryption/src/main/cpp/md5/: md5.h
lib_encryption/src/main/cpp/multidex/: multidex.cpp  multidex.h
lib_encryption/src/main/cpp/tool/: contexttool.h  debugtool.h  emulatortool.h  keytool.c  packagetool.c  signaturetool.c  stringtool.h  xposedtool.c
lib_encryption/src/main/java/lib/kalu/encryption/: ToolUtil.java
lib_encryption/src/main/java/lib/kalu/encryption/cipher/: CipherTool.java
lib_encryption/src/main/java/lib/kalu/encryption/multidex/: BoostMultiDex.java  BoostMultiDexApplication.java  BoostNative.java  Constants.java  DexHolder.java  DexInstallProcessor.java  DexLoader.java  Locker.java  Monitor.java  OptimizeService.java  Result.java  Utility.java
lib_jnitools/: CMakeLists.txt  build.gradle
lib_jnitools/src/main/: AndroidManifest.xml
lib_jnitools/src/main/cpp/cipher/: ciphertool.c  ciphertool.h
lib_jnitools/src/main/cpp/jnionload/: jnionload.c
lib_jnitools/src/main/cpp/tool/: androidtool.c  androidtool.h  applicationtool.c  applicationtool.h  contexttool.c  debugtool.c  emulatortool.c  emulatortool.h  keytool.h  logtool.c  logtool.h  packagetool.h  signaturetool.c  signaturetool.h  stringtool.c  toasttool.c  toasttool.h  xposedtool.c  xposedtool.h
lib_jnitools/src/main/java/lib/kalu/encryption/: ToolUtil.java
lib_jnitools/src/main/java/lib/kalu/jnitools/: JniUtils.java
lib_safetools_java/: build.gradle
lib_safetools_java/src/main/: AndroidManifest.xml
lib_safetools_java/src/main/java/lib/kalu/safetools/: AesTools.java  RsaTools.java  SafeConstant.java  SafeContentProvider.java  SafeEmulatorUtil.java  SafeLogUtil.java  SafeTools.java  SafeToolsContextProvider.java
lib_safetools_jni/: CMakeLists.txt  build.gradle
lib_safetools_jni/src/main/: AndroidManifest.xml
lib_safetools_jni/src/main/cpp/aes/: aes.c
lib_safetools_jni/src/main/cpp/cipher/: ciphertool.c  ciphertool.h
lib_safetools_jni/src/main/cpp/jnionload/: jnionload.c
lib_safetools_jni/src/main/cpp/md5/: md5.c
lib_safetools_jni/src/main/cpp/tool/: androidtool.c  androidtool.h  logtool.c  roottool.c  roottool.h  signaturetool.c  signaturetool.h  xposedtool.h
lib_safetools_jni/src/main/java/lib/kalu/jnisafetools/: SafeTools.java
lib_safetools_jni/src/main/java/lib/kalu/safetools/: JniUtils.java
lib_tool/: build.gradle
lib_tool/src/main/cpp/: CMakeLists.txt  jni.c  jni.h
lib_tool/src/main/cpp/openssl/: openssl_aes.cpp  openssl_aes.h  openssl_base64.cpp  openssl_base64.h  openssl_des.cpp  openssl_des.h  openssl_hmac_sha265.cpp  openssl_hmac_sha265.h  openssl_md5.cpp  openssl_md5.h  openssl_rsa.cpp  openssl_rsa.h
lib_tool/src/main/cpp/openssl/include/: dh.h  evp.h  ssl.h  symhacks.h  tls1.h
lib_tool/src/main/cpp/util/: aes_util.c  aes_util.h  base64_util.c  base64_util.h  common_util.c  common_util.h  hmac_sha265_util.c  hmac_sha265_util.h  md5_util.c  md5_util.h
lib_tool/src/main/java/lib/kalu/tool/: Box.java
mylibrary-openssl/: build.gradle  consumer-rules.pro
mylibrary-openssl/src/main/: AndroidManifest.xml
mylibrary-openssl/src/main/cpp/: CMakeLists.txt  androidJniLog.h  native-lib.cpp
mylibrary-openssl/src/main/cpp/openssl-1.1.1w/: CMakeLists.txt
mylibrary-openssl/src/main/java/lib/kalu/tool/: Box.kt  BoxProvider.kt  BoxUtils.kt  LogUtil.kt
proguard/: proguard-rules.pro
